charts/envoy-gateway/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-config
  namespace: envoy-gateway-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: prod-web
  oidc:
    provider:
      issuer: "https://auth.jeremymr.dev/application/o/homelab/"
    clientID: "Wxqom19mHxBaVE3loYlVPsl4TgcpCupOOkmnDR5X"
    clientSecret:
      name: "homelab-client-secret"
    redirectURL: "https://longhorn.jeremymr.dev/oauth2/callback"
    logoutPath: "/logout"
